# quark

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
benches/: runtime.rs
benches/compile-scale/: README.md  generate.sh
benches/compile-scale/quark-scale-1/: Cargo.toml
benches/compile-scale/quark-scale-1/src/: lib.rs
benches/compile-scale/quark-scale-10/: Cargo.toml
benches/compile-scale/quark-scale-10/src/: lib.rs
benches/compile-scale/quark-scale-100/: Cargo.toml
benches/compile-scale/quark-scale-100/src/: lib.rs
benches/compile-scale/quark-scale-1000/: Cargo.toml
benches/compile-scale/quark-scale-1000/src/: lib.rs
benches/compile-scale/quark-scale-10000/: Cargo.toml
benches/compile-scale/quark-scale-10000/src/: lib.rs
benches/compile-scale/quark-scale-500/: Cargo.toml
benches/compile-scale/quark-scale-500/src/: lib.rs
benches/compile-scale/quark-scale-5000/: Cargo.toml
benches/compile-scale/quark-scale-5000/src/: lib.rs
docs/: PERFORMANCE_STUDY.md  profiling.md
scripts/: bench-compile-scale.sh  bench-incremental-scale.sh
src/: lib.rs
tests/: integration_tests.rs
