[workspace]
members = ["."]
resolver = "2"

[package]
name = "quark"
version = "0.1.1"
edition = "2021"
authors = ["Sean O'Rourke"]
description = "Generic link-time registry infrastructure for Rust"
license = "MIT"
repository = "https://github.com/unified-field-dev/quark"
readme = "README.md"
keywords = ["registry", "inventory", "plugin", "link-time", "discovery"]
categories = ["development-tools"]
documentation = "https://docs.rs/quark"

[dependencies]
inventory = "0.3"
dhat = { version = "0.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "runtime"
harness = false

[features]
dhat-heap = ["dep:dhat"]
